styles/globals.css
@font-face {
  font-family: "Coolvetica";
  src: url("./fonts/coolvetica.otf");
}

:root {
  --color-white: #fafafa;
  --color-black: #454545;
  --grey: #ccc;
  --color-primary: #979e93;
  /* This color should be eye-catching but not harsh. It can be liberally applied to your layout as its main identity.  */
  --light-shades: #f7f7f5;
  /* Use this color as the background for your dark-on-light designs, or the text color of an inverted design.  */
  --light-accent: #9b9884;
  /* Accent colors can be used to bring attention to design elements by contrasting with the rest of the palette.  */
  --dark-accent: #8f8182;
  /* Another accent color to consider. Not all colors have to be used - sometimes a simple color scheme works best.  */
  --dark-shades: #2b3245;
  /*  Use as the text color for dark-on-light designs, or as the background for inverted designs.
   */
  --text-shadow: 0 0 1px #fff;
  --success: #63aa64;
  --warning: #e09a2c;
  --error: #f44336;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-size: 1rem;
  line-height: 1.6;
  background-color: var(--light-shades);
  color: var(--dark-shades);
  font-family: 'Epilouge';
}

main {
  min-height: 80vh;
  padding: 0rem 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

a {
  text-decoration: none;
  color: var(--color-primary);
}

a:hover {
  color: var(--dark-shades);
  transition: ease-in-out 0.2s;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
      background-color: var(--dark-shades);
      color: var(--light-shades);
  }
  .theme-toggle {
      background-color: var(--color-primary);
  }
  .theme-toggle::after {
      content: '🌙';
      left: 2px;
      background-color: var(--light-shades);
  }
}

h1, h2, h3, h4, h5 {
  font-family: 'Coolvetica';
  font-weight: 400;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 0rem;
  font-family: "Coolvetica";
  text-align: center;
}

h2 {
  padding: 0.25em;
  font-size: 2.5rem;
  margin-top: 0;
}

h3 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

button {
  display: inline-block;
  padding: 0.5rem 1rem;
  margin: 2rem auto;
  background-color: var(--color-primary);
  border-radius: 50px;
  text-decoration: none;
  color: var(--light-shades);
  font-weight: 500;
  font-size: 1.2rem;
  transition: ease-in-out 0.2s;
}

button:hover {
  background-color: var(--color-primary);
  color: #fff;
  transition: ease-in-out 0.2s;
}

img, image {
  border-radius: 15px;
}

section {
  margin: 1rem;
  min-height: 70vh;
}

